無効な記述削除